// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

import "com/digitalasset/canton/protocol/v0/participant_transfer.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

message CausalityUpdate {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  repeated string informeeStakeholders = 1;
  google.protobuf.Timestamp ts = 2;
  string domain_id = 3;
  int64 request_counter = 4;
  oneof tag {
    TransactionUpdate transactionUpdate = 5;
    TransferOutUpdate transferOutUpdate = 6;
    TransferInUpdate transferInUpdate = 7;
  }
}

message TransactionUpdate {}

message TransferOutUpdate {
  TransferId transfer_id = 1;
}

message TransferInUpdate {
  TransferId transfer_id = 1;
}
